--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
 
 [tool.poetry]
 packages = [
@@ -7,7 +8,7 @@ packages = [
 ]
 
 name = "startitin36_brain_games"
-version = "0.1.1"
+version = "0.5.1"
 description = ""
 authors = ["Leto_RUS <hahmatnur@gmail.com>"]
 
