--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
 
 [tool.poetry]
 packages = [
@@ -9,7 +10,7 @@ packages = [
 ]
 
 name = "startitin36_brain_games"
-version = "0.6.0"
+version = "0.6.3"
 description = "My first test project on Hexlet"
 authors = ["Leto_RUS <hahmatnur@gmail.com>"]
 
