Progressin game added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
+brain-progression = "brain_games.scripts.brain_progression:main"
 
 [tool.poetry]
 packages = [
@@ -10,7 +11,7 @@ packages = [
 ]
 
 name = "startitin36_brain_games"
-version = "0.6.3"
+version = "0.7.0"
 description = "My first test project on Hexlet"
 authors = ["Leto_RUS <hahmatnur@gmail.com>"]
 
