--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
 brain-progression = "brain_games.scripts.brain_progression:main"
+brain-prime = "brain_games.scripts.brain_isprime:main"
 
 [tool.poetry]
 packages = [
@@ -11,7 +12,7 @@ packages = [
 ]
 
 name = "startitin36_brain_games"
-version = "0.7.0"
+version = "0.9.0"
 description = "My first test project on Hexlet"
 authors = ["Leto_RUS <hahmatnur@gmail.com>"]
 
