--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,21 @@ brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
 brain-progression = "brain_games.scripts.brain_progression:main"
-brain-prime = "brain_games.scripts.brain_isprime:main"
+brain-prime = "brain_games.scripts.brain_prime:main"
 
 [tool.poetry]
 packages = [
   { include = "brain_games" },
 ]
 
+classifiers = [
+    "Development Status :: 5 - Production/Stable"
+]
+
+repository = "https://github.com/startitin36/python-project-lvl1"
+
 name = "startitin36_brain_games"
-version = "0.9.0"
+version = "0.9.2"
 description = "My first test project on Hexlet"
 authors = ["Leto_RUS <hahmatnur@gmail.com>"]
 
